--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TukTuk</title>
+    <title>Megascan</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href ="static/css/styles.css">
 </head>
 <body>
     <div class="login-form">
         <form action="/login" method="post">
-            <h2 class="text-center">TukTuk Log In</h2>
+            <h2 class="text-center">Megascan Log In</h2>
             {{template "error" .Error}}
             <div class="form-group">
                 <input type="text" class="form-control" placeholder="Username" required="required" name="username">
